# dm-devices-service

./: README.md  pyproject.toml
.docker/: docker-compose.yml
.github/workflows/: dm-devices-service-ci.yml
src/: config.py  main.py  models.py  schemas.py  tests.py  utils.py
